# network-flow-monitor-agent

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.k8s  README.md  codecov.yaml
.ci/common/scripts/: launch-instance.sh  resolve-ami.sh  run-ssm.sh  terminate-instance.sh  wait-ssm.sh
.ci/common/tests/: Dockerfile.test  integration-entrypoint  integration-test-03-lossy
.ci/integration-tests/ec2-scripts/: run-open-metrics-test.sh  run-test.sh  uninstall-agent.sh  verify-bpf.sh
.ci/integration-tests/k8s-scripts/: deploy-agent.sh  run-test.sh
.ci/load-tests/tcp-tester/: Cargo.toml  build.rs
.ci/load-tests/tcp-tester-bpf/: Cargo.toml
.github/workflows/: ci.yaml  codeql.yml  integration-tests-ec2-open-metrics.yml  integration-tests-ec2.yml  integration-tests-k8s.yml  integration-tests.yml  load-tests.yml  orchestrate-load-tests.yml  performance-tests.yml  tag-release.yaml  update-performance-results.yml  version-sync.yaml
charts/amazon-network-flow-monitor-agent/: Chart.yaml  Makefile  README.md  values.yaml
charts/amazon-network-flow-monitor-agent/docs/: KUBE_INSTALLATION_PROCESS.md
charts/amazon-network-flow-monitor-agent/templates/: daemonSet.yaml  serviceAccount.yaml
load-generator/: instance-config.json  performance-limits.json
load-generator/tcp-tester/: Cargo.toml  build.rs
load-generator/tcp-tester-bpf/: Cargo.toml
load-generator/tcp-tester-bpf/src/: main.rs
load-generator/tcp-tester-common/: Cargo.toml
load-generator/tcp-tester-common/src/: lib.rs
load-generator/tcp-tester/src/config/: packet_loss.json
load-generator/tcp-tester/src/os/: mod.rs
nfm-common/: Cargo.toml
nfm-common/src/: constants.rs  ebpf_actuals.rs  ebpf_mocks.rs  network.rs  sock_ops_handler.rs
nfm-controller/: Cargo.toml  build.rs
nfm-controller/src/: lib.rs  main.rs
nfm-controller/src/events/: bpf_batch.rs  event_provider.rs  event_provider_ebpf.rs  host_stats_provider.rs  mod.rs  nat_resolver.rs  network_event.rs  sock_cache.rs
nfm-controller/src/kubernetes/: efa_pod_resources.rs  flow_metadata.rs  kubernetes_metadata_collector.rs  mod.rs  podresources_v1.rs
nfm-controller/src/metadata/: eni.rs  env_metadata_provider.rs  imds_utils.rs  mod.rs  runtime_environment_metadata.rs  service_metadata.rs
nfm-controller/src/open_metrics/: mod.rs  provider.rs  server.rs  types.rs
nfm-controller/src/reports/: mod.rs  prometheus_remote_write_proto.rs  publisher.rs  publisher_amp.rs  publisher_amp_remote_write_proto.rs  publisher_endpoint.rs  publisher_prometheus_remote_write.rs  report.rs  report_otlp.rs
nfm-controller/src/utils/: command_runner.rs  conntrack_listener.rs  cpu.rs  crypto.rs  host.rs  mod.rs  test_utils.rs  vpc_cidr_checker.rs
nfm-controller/test-fixtures/: report1.json  report2.json
packaging/: README.md  common.sh
packaging/linux/: amazon-nfm-agent.spec  create_rpm.sh  network-flow-monitor-agent.spec  network-flow-monitor-start  network-flow-monitor.ini  network-flow-monitor.service
packaging/ssm-extension/: README.md  create_extension_rpm.sh  network-flow-monitor-agent-ssm.spec
test-data/: Dockerfile.test  integration-entrypoint  integration-test-01  integration-test-01-basic  integration-test-02-no-loss  integration-test-03-lossy  report-ec2-otel.json  report-k8s-eks-otel.json  report-k8s-vanilla-otel.json  report1.json  report2.json
test-data/ec2-test-scripts/: run-test.sh
test-data/tools/: introduce_loss.sh  test_common.py
verifiers/: run_performance_tests.py
verifiers/report-verifier/: Cargo.toml
(+29 files in other folders)
