[package]
name = "tcp-tester-bpf"
version = "0.1.0"
edition = "2021"
homepage = "https://code.amazon.com/packages/NetworkSonarMonitoringAgentTools"
repository = "ssh://git.amazon.com/pkg/NetworkSonarMonitoringAgentTools"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aya-ebpf = "*"
aya-log-ebpf = "*"
aya-log-common = "*"

network-types = "0.0.4"
tcp-tester-common = { path = "../tcp-tester-common", default-features = false, features=["bpf"] }

[[bin]]
name = "tcp-tester-bpf"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
rpath = false
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[workspace]
members = []
