[package]
name = "tcp-tester"
version = "0.1.0"
edition = "2021"
homepage = "https://code.amazon.com/packages/NetworkSonarMonitoringAgentTools"
repository = "ssh://git.amazon.com/pkg/NetworkSonarMonitoringAgentTools"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
nix = "0.23"
libc = "0.2"
netns-rs = "0.1.0"
env_logger = "0.10"
log = { version = "0.4", features = ["kv", "kv_serde"] }
clap = { version = "4.1", features = ["derive"] }
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"

aya = { package = "aya", version = "0.13", features = ["async_tokio"] }
aya-log = { package = "aya-log", version = "0.2" }

tcp-tester-common = { path = "../tcp-tester-common", default-features = false, features = ["user"] }

[build-dependencies]
cargo_metadata = "0.19"
which = { version = "6.0.0", default-features = false }